crates/toml/tests/snapshots/invalid/ext/table/append-with-dotted-keys-3.stderr
TOML parse error at line 7, column 2
  |
7 | [dependencies]
  |  ^^^^^^^^^^^^
duplicate key

---
TOML parse error at line 8, column 16
  |
8 | rand = "0.3.14\"
  |                ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
